RESOLVED FIXED273501
[ Ventura WK1 Debug ] 2x imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/track/track-element/track-mode are constant crashes
https://bugs.webkit.org/show_bug.cgi?id=273501
Summary [ Ventura WK1 Debug ] 2x imported/w3c/web-platform-tests/html/semantics/embed...
Jay Stfleur
Reported 2024-04-30 10:23:21 PDT
Description: imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/track/track-element/track-mode-disabled.html imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/track/track-element/track-mode.html Both tests were previously crashing on Ventura Wk1 release and debug, after fixed was summited. Test is now crashing only in Debug. Tests were originally unskipped on 274958@main Buildbot URL: https://build.webkit.org/#/builders/703/builds/5475 History: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fembedded-content%2Fmedia-elements%2Ftrack%2Ftrack-element%2Ftrack-mode-disabled.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fembedded-content%2Fmedia-elements%2Ftrack%2Ftrack-element%2Ftrack-mode.html&version_name=Ventura&limit=50000&recent=false Diff/Image Diff/Crash Log: https://build.webkit.org/results/Apple-Ventura-Debug-WK1-Tests/278151@main%20(5475)/imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/track/track-element/track-mode-crash-log.txt https://build.webkit.org/results/Apple-Ventura-Debug-WK1-Tests/278151@main%20(5475)/imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/track/track-element/track-mode-disabled-crash-log.txt stderr: ASSERTION FAILED: Uncaught exception - *** -[__NSArrayM objectAtIndex:]: index 0 beyond bounds for empty array 0 /Volumes/Data/worker/Apple-Ventura-Debug-Build/build/Source/WTF/wtf/BlockObjCExceptions.mm(39) : void ReportBlockedObjCException(NSException *__strong) 1 0x117095f69 WTFCrash 2 0x1170b8602 ReportBlockedObjCException(NSException*) 3 0x16cee1ba5 WebCore::MediaPlayerPrivateAVFoundationObjC::setCurrentTextTrack(WebCore::InbandTextTrackPrivateAVF*) 4 0x171e2d4f4 WebCore::MediaPlayerPrivateAVFoundation::configureInbandTracks() 5 0x171e2d599 WebCore::MediaPlayerPrivateAVFoundation::trackModeChanged() 6 0x171e2968c WebCore::InbandTextTrackPrivateAVF::setMode(WebCore::InbandTextTrackPrivateMode) 7 0x16cec7280 WebCore::MediaPlayerPrivateAVFoundationObjC::synchronizeTextTrackState() 8 0x171e2d3fa WebCore::MediaPlayerPrivateAVFoundation::configureInbandTracks() 9 0x171e2d599 WebCore::MediaPlayerPrivateAVFoundation::trackModeChanged() 10 0x16cec6e35 WebCore::MediaPlayerPrivateAVFoundationObjC::notifyTrackModeChanged() 11 0x171d5d103 WebCore::MediaPlayer::notifyTrackModeChanged() 12 0x170e26c6e WebCore::HTMLMediaElement::textTrackModeChanged(WebCore::TextTrack&) 13 0x17110e081 auto WebCore::TextTrack::setMode(WebCore::TextTrack::Mode)::$_7::operator()<WebCore::TextTrackClient>(WebCore::TextTrackClient&) const 14 0x17110e031 WTF::Detail::CallableWrapper<WebCore::TextTrack::setMode(WebCore::TextTrack::Mode)::$_7, void, WebCore::TextTrackClient&>::call(WebCore::TextTrackClient&) 15 0x171109aaa WTF::Function<void (WebCore::TextTrackClient&)>::operator()(WebCore::TextTrackClient&) const 16 0x1710f8ff2 WTF::WeakHashSet<WebCore::TextTrackClient, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>::forEach(WTF::Function<void (WebCore::TextTrackClient&)> const&) 17 0x1710f8aa1 WebCore::TextTrack::setMode(WebCore::TextTrack::Mode) 18 0x16ea83c2f WebCore::setJSTextTrack_modeSetter(JSC::JSGlobalObject&, WebCore::JSTextTrack&, JSC::JSValue)::'lambda'()::operator()() const 19 0x16ea83bcd void WebCore::invokeFunctorPropagatingExceptionIfNecessary<WebCore::setJSTextTrack_modeSetter(JSC::JSGlobalObject&, WebCore::JSTextTrack&, JSC::JSValue)::'lambda'()>(JSC::JSGlobalObject&, JSC::ThrowScope&, WebCore::setJSTextTrack_modeSetter(JSC::JSGlobalObject&, WebCore::JSTextTrack&, JSC::JSValue)::'lambda'()&&) 20 0x16ea83b1c WebCore::setJSTextTrack_modeSetter(JSC::JSGlobalObject&, WebCore::JSTextTrack&, JSC::JSValue) 21 0x16e9d3f66 bool WebCore::IDLAttribute<WebCore::JSTextTrack>::set<&WebCore::setJSTextTrack_modeSetter(JSC::JSGlobalObject&, WebCore::JSTextTrack&, JSC::JSValue), (WebCore::CastedThisErrorBehavior)0>(JSC::JSGlobalObject&, long long, long long, JSC::PropertyName) 22 0x16e9d3de5 WebCore::setJSTextTrack_mode(JSC::JSGlobalObject*, long long, long long, JSC::PropertyName) 23 0x118dd0860 WTF::FunctionPtr<(WTF::PtrTag)30177, bool (JSC::JSGlobalObject*, long long, long long, JSC::PropertyName), (WTF::FunctionAttributes)1>::operator()(JSC::JSGlobalObject*, long long, long long, JSC::PropertyName) const 24 0x118ec5023 JSC::JSObject::putInlineSlow(JSC::JSGlobalObject*, JSC::PropertyName, JSC::JSValue, JSC::PutPropertySlot&) 25 0x118536e68 JSC::JSObject::putInlineForJSObject(JSC::JSCell*, JSC::JSGlobalObject*, JSC::PropertyName, JSC::JSValue, JSC::PutPropertySlot&) 26 0x118536b46 JSC::JSCell::putInline(JSC::JSGlobalObject*, JSC::PropertyName, JSC::JSValue, JSC::PutPropertySlot&) 27 0x118538510 JSC::JSValue::putInline(JSC::JSGlobalObject*, JSC::PropertyName, JSC::JSValue, JSC::PutPropertySlot&) 28 0x118adf0f9 llint_slow_path_put_by_id 29 0x11990a448 llint_entry 30 0x119923426 llint_entry 31 0x119923426 llint_entry
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-30 10:23:44 PDT
EWS
Comment 2 2024-04-30 10:42:18 PDT
Test gardening commit 278174@main (008a006df270): <https://commits.webkit.org/278174@main> Reviewed commits have been landed. Closing PR #27938 and removing active labels.
Jay Stfleur
Comment 3 2024-05-08 16:07:52 PDT
*** Bug 273577 has been marked as a duplicate of this bug. ***
Eric Carlson
Comment 4 2024-05-13 13:30:13 PDT
EWS
Comment 5 2024-05-14 06:53:28 PDT
Committed 278754@main (75dd6c5e94b3): <https://commits.webkit.org/278754@main> Reviewed commits have been landed. Closing PR #28498 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.