[ Ventura WK1 Debug ] 2x imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/track/track-element/track-mode are constant crashes https://bugs.webkit.org/show_bug.cgi?id=273501 rdar://127302101

Reviewed by Jer Noble.

Work around an AVFoundation bug that has been fixed in trunk but which still crashes
in downlevels by catching and ignoring ObjC exceptions sometimes thrown from
-[AVPlayerItem selectMediaOption:inMediaSelectionGroup:].

* Source/WebCore/platform/graphics/avfoundation/MediaSelectionGroupAVFObjC.mm:
(WebCore::MediaSelectionGroupAVFObjC::selectionTimerFired):
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::processMediaSelectionOptions):
(WebCore::MediaPlayerPrivateAVFoundationObjC::setCurrentTextTrack):

Canonical link: https://commits.webkit.org/278754@main